FIX - Change date format and destination on Safari page

--- a/inc/scss/_global.scss
+++ b/inc/scss/_global.scss
@@ -103,7 +103,7 @@ h5 {
         margin-bottom: 1em;
         padding-bottom: 0.25em;
         text-align: center;
-        border-bottom: 1px dashed $brand-secondary;
+        border-bottom: 2px dashed $brand-secondary;
     }
     
     &__xxl {
